[package]
name = "async-ssh2-tokio"
version = "0.8.11"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Asynchronous and easy-to-use high level ssh client library for rust."
keywords = ["async", "asynchronous", "ssh", "ssh2", "ssh-client"]
repository = "https://github.com/Miyoshi-Ryota/async-ssh2-tokio"
categories = ["network-programming"]
authors = ["Miyoshi-Ryota <m1yosh1.ry0t4@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl = ["russh/openssl"]

[dependencies]
russh = "0.45.0"
russh-keys = "0.45.0"
russh-sftp = "2.0.1"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
