[package]
name = "async-ssh2-tokio"
version = "0.9.1"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
description = "Asynchronous and easy-to-use high level ssh client library for rust."
keywords = ["async", "asynchronous", "ssh", "ssh2", "ssh-client"]
repository = "https://github.com/Miyoshi-Ryota/async-ssh2-tokio"
categories = ["network-programming"]
authors = ["Miyoshi-Ryota <m1yosh1.ry0t4@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
openssl = []

[dependencies]
russh = "0.52.1"
russh-sftp = "2.1.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs"] }

[dev-dependencies]
dotenv = "0.15.0"
